test/types/file/freadNotABoolean.good
freadNotABoolean.chpl:5: error: bad format in channel.read(inout a:bool) with path "freadNotABoolean.txt" offset 0
